Fix table column alignments in flex

--- a/src/app/tz-table/tz-table.component.scss
+++ b/src/app/tz-table/tz-table.component.scss
@@ -1,7 +1,6 @@
 $border-color: #f0f0f0;
 $heading-background: #f8f9fa;
 :host {
-  display: block;
   width: 100%;
   height: 100%;
   border: 1px solid $border-color;
